test/should-fail/vsgc1901.f3
/*
 * @test/compile-error
 */
import f3.animation.KeyFramexx;
import f3.xxanimation.KeyFrame;
